--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,78 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #e1e1e1;
+}
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.header-container {
+  background: #444;
+  font-size: 13px;
+  height: auto;
+  line-height: 50px;
+  padding: 0;
+}
+.header-container .header{
+  justify-content: center;
+}
+.header-container .brand {
+  display: block;
+  width: 120px;
+  padding: 3px 0;
+  height: 50px;
+  line-height: 50px;
+  color: #ccc;
+  font-weight: 700;
+  flex: 0 0 auto;
+}
+.header-container .brand img {
+  vertical-align: text-bottom;
+  height: auto;
+  max-width: 100%;
+}
+.header-container .nav {
+  background: #444;
+  color: #ccc;
+  font-size: 13px;
+  height: 50px;
+  line-height: 50px;
+  text-align: right;
+}
+.header-container .ant-menu-dark.ant-menu-horizontal > .ant-menu-item:hover,
+.header-container .ant-menu.ant-menu-dark .ant-menu-item-selected {
+  background-color: #444;
+  color: #fff;
+}
+.main-container {
+  flex: 1;
+}
+.main-content{
+  margin: 15px auto;
+  min-height: 400px;
+}
+.footer-container{
+  justify-content: center;
+  background-color: #fff;
+}
+.footer-container .footer{
+  background-color: #fff;
+}
+@media all and (max-width: 767px) {
+  .header-container{
+    margin: 0 5px;
+  }
+  .header-container .brand {
+    margin: 0 auto;
+  }
+  .header-container .nav {
+    text-align: center;
+  }
+  .main-content{
+    margin: 20px auto;
+  }
 }
